k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-devops-app
  template:
    metadata:
      labels:
        app: eks-devops-app
    spec:
      containers:
      - name: eks-devops-app
        image: 400338099943.dkr.ecr.us-west-2.amazonaws.com/springboot-eks:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
