k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-devops-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
#    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:400338099943:certificate/19244db9-f4ad-4af8-bd90-6ffb94a11296
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:400338099943:certificate/362a9661-33a1-40b6-a61e-7ef7c3cc7031
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: eks-devops-apps
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
spec:
  ingressClassName: alb
  rules:
    - host: app.awsguruji.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-devops-service
                port:
                  number: 80
